@@ -2,7 +2,8 @@ version 0.81.01
 	udev rule change
 	K-30 commandline exposure mode bugfix ( thx Camilo Polymeris )
 	User mode combo bugfix
-	K100D / K100D Super connection bugfix
+	K100D / K100D Super connection bugfix ( not working )
+	gtk_range_get_value bugfix
 
 version 0.81.00 ( 2013-04-25 )
 	Support for K-5 II / K-5 IIs ( thx Thomas Lehmann for testing )
